--- a/testcoll/index.html
+++ b/testcoll/index.html
@@ -4,7 +4,7 @@ title: ""
 ---
 <ul>
   {% for thing in site.members %}
-    <p> {{ thing.name }}</p>
+    <p> {{ thing.:name }}</p>
     <p>  testestest </p>
 
   {% endfor %}
