--- a/testcoll/index.html
+++ b/testcoll/index.html
@@ -4,8 +4,23 @@ title: ""
 ---
 <ul>
   {% for thing in site.members %}
-    <p> {{ thing.:name }}</p>
-    <p>  testestest </p>
+    <p> Name: {{ thing.name }}</p>
+    <p> Level: {{ thing.level }}</p>
+    <p> Skill Points: {{ thing.skill }}</p>
+    <p> Mentor: {{ thing.:mentor }}</p>
+    <p> Gender: {{ thing.gender }}</p>
+    <p> Hit Points: {{ thing.health }}</p>
+    <p> Power: {{ thing.power }}</p>
+    <p> Defense: {{ thing.defense }}</p>
+    <p> Toughness: {{ thing.tough }}</p>
+    <p> Might: {{ thing.might }}</p>
+    <p> Precision: {{ thing.precision }}</p>
+    <p> Restoration:{{ thing.restoration }}</p>
+    <p> Vitalization: {{ thing.vital }}</p>
+    <p> Dominance: {{ thing.dominance }}</p>
+    <p> Movement: {{ thing.movement }}</p>
+    <p> Personality: {{ thing.personality }}</p>
+    <p>  --------------- </p>
 
   {% endfor %}
 </ul>
