--- a/testcoll/index.html
+++ b/testcoll/index.html
@@ -5,6 +5,9 @@ title: ""
 <ul>
   {% for thing in site.members %}
     <p> Name: {{ thing.name }}</p>
+    <p> Superpower: {{ thing.ability }}</p>
+    <p> Combat Rating: {{ thing.cr }}</p>
+    <p> PVP CR: {{ thing.pvp }}</p>
     <p> Level: {{ thing.level }}</p>
     <p> Skill Points: {{ thing.skill }}</p>
     <p> Mentor: {{ thing.:mentor }}</p>
