--- a/testcoll/index.html
+++ b/testcoll/index.html
@@ -5,7 +5,7 @@ title: ""
 <ul>
   <p> Guild Roster: </p>
   {% for thing in site.members %}
-    <p> <a href="http://stormblade-motius.github.io/members/"{{ thing.name }}> {{ thing.name }} </a></p>
+    <p> <a href='http://stormblade-motius.github.io/members/{{ thing.name }}'> {{ thing.name }} </a></p>
     <p>  --------------- </p>
 
   {% endfor %}
